tests/NormalTests/paczka1/small_fuzzy/32934389.err
Error in line 1: wuXLGc6uM A158 44,4
Error in line 10: 8O5aD A137 12,1
